--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
     <!-- link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- link to css -->
-    <link rel="stylesheet" href="assets/css/style.css">
     <!-- link to bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- link to css -->
+    <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
 
 </head>
 <body>
 
     <div class="container">
-        <div class='row'>
+        <div class='row1'>
             <h1>Trivial Trivia Game</h1>
         </div>
 
@@ -37,6 +37,6 @@
     </div>
 
 
-    <script type="text/javascript" src= "assets/javascript/app.js"></script>
+    <script type="text/javascript" src= "./assets/javascript/app.js"></script>
 </body>
 </html>
